[gd_scene load_steps=3 format=3 uid="uid://ckjanx7inxds4"]

[ext_resource type="Script" path="res://Scenes/HostView/QuestionListItem/QuestionListItem.gd" id="1_vktlg"]
[ext_resource type="PackedScene" uid="uid://bd4nl8lu11j5f" path="res://Scenes/UISounds/UISounds.tscn" id="2_rilot"]

[node name="QuestionListItem" type="PanelContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_vktlg")

[node name="UISounds" parent="." instance=ExtResource("2_rilot")]

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="QuestionText" type="Label" parent="HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text_overrun_behavior = 3

[node name="SubmitButton" type="Button" parent="HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Load"

[connection signal="pressed" from="HBoxContainer/SubmitButton" to="." method="_on_submit_button_pressed"]
